<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/book_title_label" />

        <EditText
            android:id="@+id/book_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/book_title_hint"
            android:inputType="textPersonName" />
        <EditText
            android:id="@+id/book_author"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:hint="@string/book_author_hint"
            android:inputType="textPersonName" />

        <TextView
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/crime_details_label" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:fontFamily="@font/bowlby_one_sc"
            android:text="@string/book_status"
            android:textSize="17dp" />

        <RadioGroup
            android:id="@+id/status"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="16dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioButton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/book_finish"
                />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/book_now" />

            <RadioButton
                android:id="@+id/radioButton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/book_will" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="351dp"
            android:layout_height="23dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="122dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="65dp"
                android:layout_marginRight="16dp"
                android:text="@string/book_time_before"
                android:textSize="17dp"
                />

            <TextView
                android:layout_width="164dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:text="@string/book_time_after"
                android:textSize="17dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/starting_date"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="8dp" />

            <Button
                android:id="@+id/finishing_date"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
               />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="115dp"
                android:layout_height="wrap_content"
                android:textSize="14dp"
                android:text="@string/book_pagers" />

            <EditText
                android:id="@+id/pages"
                android:layout_width="64dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:ems="10"
                android:inputType="number" />

            <Spinner
                android:id="@+id/genre"
                android:layout_width="186dp"
                android:layout_height="match_parent"
                android:entries="@array/book_genre" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:fontFamily="@font/abeezee_italic"
            android:text="@string/book_summary"
            android:textSize="17dp"
            android:typeface="normal" />

        <EditText
            android:id="@+id/summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:lines="5" />

        <EditText
            android:id="@+id/note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/book_note"
            android:inputType="textPersonName"
             />

        <RatingBar
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="5dp"
            android:indeterminate="false"
            android:numStars="5"
            android:stepSize="1" />

        <Button
            android:id="@+id/book_report"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/report_text" />

        <Button
            android:id="@+id/book_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book_delete"
            android:layout_marginTop="15dp"
            android:background="@color/colorRedLight"/>

    </LinearLayout>


</RelativeLayout>